Add initial implementation for stadium ticket management
Introduced entities (User, Role, Match, Stadium, Ticket) and their relationships, along with corresponding REST controllers for CRUD operations. Configured Swagger for API documentation and added test-specific configurations. Updated README with project setup instructions.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,22 @@
 spring.application.name=Stadium_tickets
+
+# Database Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/ticketdb
+spring.datasource.username=ticketuser
+spring.datasource.password=secret
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA Configuration
+# Changed from 'validate' to 'create' to resolve the "missing table [match]" error
+# This is a temporary solution. For production, consider:
+# 1. Running the Flyway migrations properly using docker-compose up
+# 2. Or manually creating the tables using the SQL in V1__init_schema.sql
+# 3. Then changing this back to 'validate' or 'update'
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Swagger/OpenAPI Configuration
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/v3/api-docs
