--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.application.name=Stadium_tickets
 
+# Logging Configuration
+logging.level.org.example.stadium_tickets.security=DEBUG
+logging.level.org.springframework.security=DEBUG
+
 # Database Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/ticketdb
 spring.datasource.username=ticketuser
@@ -7,15 +11,21 @@ spring.datasource.password=secret
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration
-# Changed from 'validate' to 'create' to resolve the "missing table [match]" error
-# This is a temporary solution. For production, consider:
-# 1. Running the Flyway migrations properly using docker-compose up
-# 2. Or manually creating the tables using the SQL in V1__init_schema.sql
-# 3. Then changing this back to 'validate' or 'update'
-spring.jpa.hibernate.ddl-auto=create
+# Use Flyway for database migrations instead of Hibernate schema generation
+spring.jpa.hibernate.ddl-auto=validate
+
+# Flyway Configuration
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
+# Disable validation to allow modified migrations (e.g., admin password change in V3)
+spring.flyway.validate-on-migrate=false
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# JWT Configuration
+jwt.secret=stadiumTicketsSecretKeyThatIsAtLeast32BytesLong
+jwt.expirationMs=86400000
 
 # Swagger/OpenAPI Configuration
 springdoc.swagger-ui.path=/swagger-ui.html
